--- a/CommentTranslator/CommentTranslator.csproj
+++ b/CommentTranslator/CommentTranslator.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>TranslatePopup.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\VsOutputLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\LICENSE">
