--- a/CommentTranslator/CommentTranslator.csproj
+++ b/CommentTranslator/CommentTranslator.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Presentation\TranslatePopupAdornment.cs" />
     <Compile Include="Presentation\TranslatePopupConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\CommentHelper.cs" />
     <Compile Include="Util\VsOutputLogger.cs" />
   </ItemGroup>
   <ItemGroup>
