--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,11 +6,10 @@ install:
 before_build:
   - ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
   #- ps: Vsix-TokenReplacement CommentTranslator\source.extension.cs 'Version = "([0-9\\.]+)"' 'Version = "{version}"'
-  - cmd: nuget restore -Verbosity quiet
 
-#build_script:
-  #- nuget restore -Verbosity quiet
-  #- msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
+build_script:
+  - nuget restore -Verbosity quiet
+  - msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
 after_test:
   - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
