--- a/CommentTranslator/CommentTranslator.csproj
+++ b/CommentTranslator/CommentTranslator.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<Import Project="..\packages\Microsoft.VSSDK.BuildTools.15.0.26201\build\Microsoft.VSSDK.BuildTools.props" Condition="Exists('..\packages\Microsoft.VSSDK.BuildTools.15.0.26201\build\Microsoft.VSSDK.BuildTools.props')" />
+  <Import Project="..\packages\Microsoft.VSSDK.BuildTools.15.0.26201\build\Microsoft.VSSDK.BuildTools.props" Condition="Exists('..\packages\Microsoft.VSSDK.BuildTools.15.0.26201\build\Microsoft.VSSDK.BuildTools.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -51,18 +51,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Ardonment\CommentAdornmentTagger.cs" />
+    <Compile Include="Ardonment\CommentAdornmentTaggerProvider.cs" />
+    <Compile Include="Ardonment\CommentTranslateTag.cs" />
+    <Compile Include="Ardonment\CommentTranslateTagger.cs" />
+    <Compile Include="Ardonment\CommentTranslateTaggerProvider.cs" />
     <Compile Include="Client\TranslateClient.cs" />
     <Compile Include="Command\TranslateCommand.cs" />
     <Compile Include="CommentTranslatorPackage.cs" />
-    <Compile Include="Option\OptionPageGrid.cs">
+    <Compile Include="Presentation\OptionPageGrid.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Option\Settings.cs" />
+    <Compile Include="Ardonment\CommentAdornment.cs" />
+    <Compile Include="Support\IntraTextAdornmentTagger.cs" />
+    <Compile Include="Support\RegexMultiLineTagger.cs" />
+    <Compile Include="Support\RegexTagger.cs" />
+    <Compile Include="Util\Settings.cs" />
     <Compile Include="Presentation\TranslatePopup.xaml.cs">
       <DependentUpon>TranslatePopup.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Presentation\TranslatePopupAdornment.cs" />
-    <Compile Include="Presentation\TranslatePopupConnector.cs" />
+    <Compile Include="Ardonment\TranslatePopupAdornment.cs" />
+    <Compile Include="Ardonment\TranslatePopupConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\CommentHelper.cs" />
     <Compile Include="Util\VsOutputLogger.cs" />
