--- a/CommentTranslator/CommentTranslator.csproj
+++ b/CommentTranslator/CommentTranslator.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\CommentHelper.cs" />
     <Compile Include="Util\VsOutputLogger.cs" />
+    <Compile Include="Util\WpfTextViewHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\LICENSE">
